fix: focus mode & dynamic panels on small screens

--- a/packages/components/src/Packages/Themes/org.standardnotes.theme-dynamic/src/main.scss
+++ b/packages/components/src/Packages/Themes/org.standardnotes.theme-dynamic/src/main.scss
@@ -1,23 +1,25 @@
-#navigation {
-  flex: none !important;
-  width: 10px !important;
-  transition: width 0.25s;
-}
+@media screen and (min-width: 768px) {
+  #navigation {
+    flex: none !important;
+    width: 10px !important;
+    transition: width 0.25s;
+  }
 
-#navigation:hover {
-  flex: initial;
-  width: 200px !important;
-  transition: width 0.25s;
-}
+  #navigation:hover {
+    flex: initial;
+    width: 200px !important;
+    transition: width 0.25s;
+  }
 
-#items-column {
-  flex: none !important;
-  width: 270px !important;
-  transition: width 0.25s;
-}
+  #items-column {
+    flex: none !important;
+    width: 270px !important;
+    transition: width 0.25s;
+  }
 
-#items-column:hover {
-  flex: initial;
-  width: 380px !important;
-  transition: width 0.25s;
+  #items-column:hover {
+    flex: initial;
+    width: 380px !important;
+    transition: width 0.25s;
+  }
 }
